fix: add utility class to hide scrollbar and replace z-index with utility variable.

--- a/src/components/demoSpectra/demoSpectra.module.scss
+++ b/src/components/demoSpectra/demoSpectra.module.scss
@@ -57,7 +57,6 @@
         row-gap: 14px;
         column-gap: 12px;
         width: auto;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto;
     }
 }
